# hebust2025-vision

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: config.yaml
script/: camera.rules  camera_option.sh
src/: core.cpp  main.cpp  serial_port.cpp
src/include/: core.hpp  interface.hpp  kalman_filter.hpp  options.hpp  param.hpp  serial_port.hpp  tracker.hpp
src/include/util/: file_manager.hpp  fps_counter.hpp  keyboard_listener.hpp  logger.hpp  safe_queue.hpp  singleton_base.hpp  slope.hpp  state_machine.hpp  util_func.hpp
